--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "normalize.css": "^8.0.1",
         "vuetify": "^3.1.5"
     }
 }
