--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@vuelidate/core": "^2.0.0",
+        "@vuelidate/validators": "^2.0.0",
+        "mitt": "^3.0.0",
         "normalize.css": "^8.0.1",
         "vuetify": "^3.1.5"
     }
