--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@vuelidate/core": "^2.0.0",
         "@vuelidate/validators": "^2.0.0",
+        "libphonenumber-js": "^1.10.20",
         "mitt": "^3.0.0",
         "normalize.css": "^8.0.1",
         "vuetify": "^3.1.5"
