--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "dependencies": {
         "@vuelidate/core": "^2.0.0",
         "@vuelidate/validators": "^2.0.0",
+        "chart.js": "^4.2.1",
         "libphonenumber-js": "^1.10.20",
         "mitt": "^3.0.0",
         "normalize.css": "^8.0.1",
+        "vue-chartjs": "^5.2.0",
         "vuetify": "^3.1.5"
     }
 }
