--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "mitt": "^3.0.0",
         "normalize.css": "^8.0.1",
         "vue-chartjs": "^5.2.0",
+        "vue-float-action-button": "^0.7.9",
         "vuetify": "^3.1.5"
     }
 }
