--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "libphonenumber-js": "^1.10.20",
         "mitt": "^3.0.0",
         "normalize.css": "^8.0.1",
+        "ress": "^5.0.2",
         "vue-chartjs": "^5.2.0",
         "vue-float-action-button": "^0.7.9",
         "vuetify": "^3.1.5"
